@@ -1,3 +1,8 @@
+2013-05-30  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* The `user_logged_in` signal now optionally receives a
+	`sociallogin` parameter, in case of a social login.
+
 2013-05-29  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* Added `social_account_added` (contributed by orblivion, thanks).
